--- a/pom.xml
+++ b/pom.xml
@@ -112,11 +112,13 @@
     </dependency>
 
     <!-- https://mvnrepository.com/artifact/org.scream3r/jssc -->
+    <!-- https://mvnrepository.com/artifact/io.github.java-native/jssc -->
     <dependency>
-      <groupId>org.scream3r</groupId>
+      <groupId>io.github.java-native</groupId>
       <artifactId>jssc</artifactId>
-      <version>2.8.0</version>
+      <version>2.9.5</version>
     </dependency>
+
 
     <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
     <dependency>
